--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://10.1.13.143:3306/doc
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=151028
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
