--- a/pom.xml
+++ b/pom.xml
@@ -116,29 +116,37 @@
         </dependency>
 
         <!--ES -->
-          <dependency>
+        <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>6.8.10</version>
+            <version>7.7.0</version>
         </dependency>
-<!--        2.elasticsearch 高级API-->
+        <!--        2.elasticsearch 高级API-->
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>6.8.10</version>
+            <version>7.7.0</version>
         </dependency>
-<!--        3.junit-->
+        <!--        3.junit-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-<!--        4.lombok-->
+        <!--        4.lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.22</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
 
     </dependencies>
 
