--- a/pom.xml
+++ b/pom.xml
@@ -128,11 +128,11 @@
             <version>7.7.0</version>
         </dependency>
         <!--        3.junit-->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>junit</groupId>-->
+<!--            <artifactId>junit</artifactId>-->
+<!--            <version>4.12</version>-->
+<!--        </dependency>-->
         <!--        4.lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
